# slm-data-extraction

./: .gitignore  fields.txt  notes.md  overview.excalidraw  s3_put_plain_pages.sh
inference/: inference.py  prompter.py  pyproject.toml
page-embedder/: embed_exporter.py  embedder.py  pyproject.toml  txt_reader.py
pdi-parser/: Dockerfile  get_urls.mjs  metadata.csv  parse_pdf.py  parse_pdfs.py  pdf_urls.txt  pyproject.toml  run.sh  s3_bkp.sh  s3_put.sh  utils.py
rag/: embed_exporter.py  embed_fn.py  embedder.py  embedding_store.py  page_reader.py  prompter.py  rag.py  txt_reader.py
rag/db_ingestor/: embed_pages.py
rag/slm_extractor/: extract_data.py
slm/: chains.py  chat.py  config.py  config.yml  embed_fn.py  embedding_store.py  extract_data.py  extraction_options.json  ingest.py  metadata_db.py  prompter.py  pyproject.toml  rag.py  run_embed.sh  run_extractor.sh  s3_bkp.sh  vec_store.py
slm/db_ingestor/: chains.py  chat.py  config.py  config.yml  embed_pages.py  extract.py  extract_data.py  extract_metadata.py  ingest.py  question.yml
slm/lang_extract/: run.py
slm/results/: test1.txt  test2.txt
slm/slm_extractor/: extract_data.py  extraction_options.json  save_results.py
slm/slm_extractor/logs/: big_prompt.txt
validation/: .~lock.validation.xlsx#  graphing.py  ground_truth.xlsx  pyproject.toml  validation.py  validation.xlsx
vector-store/: README.md  docker-compose.yml  index.sql  migration.py  start.sql
