[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["Lucas Ikuhara <ikuhara@ibm.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
ollama = "^0.4.7"
pgvector = "^0.4.0"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
