[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["Lucas Ikuhara <ikuhara@ibm.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
ollama = "^0.5.4"
pgvector = "^0.4.0"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"
langchain-openai = "^0.3.33"
langchain-community = "^0.3.29"
langchain-core = "^0.3.76"
langchain = "^0.3.27"
langchain-ollama = "^0.3.8"
pypdf = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
