[project]
name = "validation"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Ikuhara",email = "lri2911@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
